--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-@import "tailwindcss";
+@import "tailwindcss/preflight";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -30,7 +33,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  
 }
+
 
 h1 {
   font-size: 3.2em;
